EC2-Service/instence-with-security-group.tf
provider "aws" {
  region = "eu-north-1"
  access_key = "<access_key_id>"
  secret_key = "<secret_key_id>"
}


resource "aws_instance" "my_instance" {
  ami = "ami-0aba19e56f3eaec05"
  instance_type = "t3.micro"
  vpc_security_group_ids = [aws_security_group.my_sg.id]
  tags = {
    env = "dev"
  }
}

resource "aws_security_group" "my_sg" {
  name = "my-sg"
  vpc_id = "vpc-085b390d863d9bca3"
  ingress {
    protocol = "TCP"
    from_port = 80
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol = "TCP"
    from_port = 22
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    protocol = "-1"
    from_port = 0
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    env = "dev"
  }
}
